--- a/Frontend-PI/Views/User/Create.cshtml
+++ b/Frontend-PI/Views/User/Create.cshtml
@@ -1,4 +1,7 @@
-﻿@model Frontend_PI.Models.User
+﻿@using CaptchaMvc.HtmlHelpers
+@using CaptchaMvc;
+
+@model Frontend_PI.Models.User
 
 @{
     ViewBag.Title = "Create";
@@ -7,10 +10,10 @@
 <h2>Create</h2>
 
 
-@using (Html.BeginForm()) 
+@using (Html.BeginForm())
 {
     @Html.AntiForgeryToken()
-    
+
     <div class="form-horizontal">
         <h4>User</h4>
         <hr />
@@ -54,9 +57,32 @@
                 @Html.ValidationMessageFor(model => model.password, "", new { @class = "text-danger" })
             </div>
         </div>
+
+
+        <div class="form-group">
+            @Html.Label("   ", htmlAttributes: new { @class = "control-label col-md-2" })
+
+            <div class="col-md-10">
+                @*Html.MathCaptcha()*@
+                @Html.Captcha(5)
+                <br />
+                @if (ViewBag.ErrMessage != null)
+                {
+                    <div class="alert alert-danger" role="alert">
+                        <p class="Error">  @ViewBag.ErrMessage </p>
+                    </div>
+                }
+
+            </div>
+        </div>
+
+
+
+
+
         <div class="form-group">
             <div class="col-md-offset-2 col-md-10">
-                <input type="submit" value="Create" class="btn btn-default" />
+                <input type="submit" value="S’inscrire" class="btn btn-primary" />
             </div>
         </div>
     </div>
