--- a/Frontend-PI/Views/Publication/Details.cshtml
+++ b/Frontend-PI/Views/Publication/Details.cshtml
@@ -16,8 +16,8 @@
                     <h1>News &amp; Articles</h1>
                     <ol class="tg-breadcrumb">
                         <li><a href="javascript:void(0);">home</a></li>
-                        <li><a href="javascript:void(0);">news</a></li>
-                        <li class="tg-active">News Title Here</li>
+                        <li><a href="javascript:void(0);">Publication</a></li>
+                        <li class="tg-active">@Html.DisplayNameFor(model => model.title)</li>
                     </ol>
                 </div>
             </div>
@@ -44,10 +44,10 @@
                             <figcaption class="tg-author">
                                 <img src="~/Content/images/author/imag-26.jpg" alt="image description">
                                 <div class="tg-authorinfo">
-                                    <span class="tg-bookwriter">By: <a href="javascript:void(0);">Angela Gunning</a></span>
+                                    <span class="tg-bookwriter">By: <a href="javascript:void(0);">@Html.DisplayNameFor(model => model.user.firstName) @Html.DisplayNameFor(model => model.user.lastName)</a></span>
                                     <ul class="tg-postmetadata">
-                                        <li><a href="javascript:void(0);"><i class="fa fa-comment-o"></i><i>21,415 Comments</i></a></li>
-                                        <li><a href="javascript:void(0);"><i class="fa fa-eye"></i><i>24,565 Views</i></a></li>
+                                        <li><a href="javascript:void(0);"><i class="fa fa-comment-o"></i><i>@Html.DisplayNameFor(model => model.nbLike)</i></a></li>
+                                        <li><a href="javascript:void(0);"><i class="fa fa-eye"></i><i>@Html.DisplayNameFor(model => model.nbDisLike)</i></a></li>
                                     </ul>
                                 </div>
                             </figcaption>
@@ -57,8 +57,8 @@
                         <div id="tg-content" class="tg-content">
                             <div class="tg-newsdetail">
                                 <ul class="tg-bookscategories">
-                                    <li><a href="javascript:void(0);">Adventure</a></li>
-                                    <li><a href="javascript:void(0);">Fun</a></li>
+                                    <li><a href="javascript:void(0);">Books</a></li>
+                                    <li><a href="javascript:void(0);">Publications</a></li>
                                 </ul>
                                 <div class="tg-themetagbox"><span class="tg-themetag">featured</span></div>
                                 <div class="tg-posttitle">
@@ -88,24 +88,13 @@
                                         </div>
                                     </div>
                                 </div>
+                                @Html.Partial("~/Views/Comment/IndexAdminComment.cshtml")
                                 <div class="tg-leaveyourcomment">
                                     <div class="tg-sectionhead">
                                         <h2>Leave Your Comment</h2>
                                     </div>
                                     <form class="tg-formtheme tg-formleavecomment">
                                         <fieldset>
-                                            <div class="form-group">
-                                                <input type="text" name="full name" class="form-control" placeholder="First Name*">
-                                            </div>
-                                            <div class="form-group">
-                                                <input type="text" name="last name" class="form-control" placeholder="Last Name*">
-                                            </div>
-                                            <div class="form-group">
-                                                <input type="email" name="email address" class="form-control" placeholder="Email*">
-                                            </div>
-                                            <div class="form-group">
-                                                <input type="text" name="subject" class="form-control" placeholder="Subject (optional)">
-                                            </div>
                                             <div class="form-group">
                                                 <textarea placeholder="Comment"></textarea>
                                             </div>
@@ -148,167 +137,7 @@
                                     </ul>
                                 </div>
                             </div>
-                            <div class="tg-widget tg-widgettrending">
-                                <div class="tg-widgettitle">
-                                    <h3>Trending Posts</h3>
-                                </div>
-                                <div class="tg-widgetcontent">
-                                    <ul>
-                                        <li>
-                                            <article class="tg-post">
-                                                <figure><a href="javascript:void(0);"><img src="~/Content/images/products/img-04.jpg" alt="image description"></a></figure>
-                                                <div class="tg-postcontent">
-                                                    <div class="tg-posttitle">
-                                                        <h3><a href="javascript:void(0);">Where The Wild Things Are</a></h3>
-                                                    </div>
-                                                    <span class="tg-bookwriter">By: <a href="javascript:void(0);">Kathrine Culbertson</a></span>
-                                                </div>
-                                            </article>
-                                        </li>
-                                        <li>
-                                            <article class="tg-post">
-                                                <figure><a href="javascript:void(0);"><img src="~/Content/images/products/img-05.jpg" alt="image description"></a></figure>
-                                                <div class="tg-postcontent">
-                                                    <div class="tg-posttitle">
-                                                        <h3><a href="javascript:void(0);">Where The Wild Things Are</a></h3>
-                                                    </div>
-                                                    <span class="tg-bookwriter">By: <a href="javascript:void(0);">Kathrine Culbertson</a></span>
-                                                </div>
-                                            </article>
-                                        </li>
-                                        <li>
-                                            <article class="tg-post">
-                                                <figure><a href="javascript:void(0);"><img src="~/Content/images/products/img-06.jpg" alt="image description"></a></figure>
-                                                <div class="tg-postcontent">
-                                                    <div class="tg-posttitle">
-                                                        <h3><a href="javascript:void(0);">Where The Wild Things Are</a></h3>
-                                                    </div>
-                                                    <span class="tg-bookwriter">By: <a href="javascript:void(0);">Kathrine Culbertson</a></span>
-                                                </div>
-                                            </article>
-                                        </li>
-                                        <li>
-                                            <article class="tg-post">
-                                                <figure><a href="javascript:void(0);"><img src="~/Content/images/products/img-07.jpg" alt="image description"></a></figure>
-                                                <div class="tg-postcontent">
-                                                    <div class="tg-posttitle">
-                                                        <h3><a href="javascript:void(0);">Where The Wild Things Are</a></h3>
-                                                    </div>
-                                                    <span class="tg-bookwriter">By: <a href="javascript:void(0);">Kathrine Culbertson</a></span>
-                                                </div>
-                                            </article>
-                                        </li>
-                                    </ul>
-                                </div>
-                            </div>
-                            <div class="tg-widget tg-widgetinstagram">
-                                <div class="tg-widgettitle">
-                                    <h3>Instagram</h3>
-                                </div>
-                                <div class="tg-widgetcontent">
-                                    <ul>
-                                        <li>
-                                            <figure>
-                                                <img src="~/Content/images/instagram/img-01.jpg" alt="image description">
-                                                <figcaption><a href="javascript:void(0);"><i class="icon-heart"></i><em>50,134</em></a></figcaption>
-                                            </figure>
-                                        </li>
-                                        <li>
-                                            <figure>
-                                                <img src="~/Content/images/instagram/img-02.jpg" alt="image description">
-                                                <figcaption><a href="javascript:void(0);"><i class="icon-heart"></i><em>50,134</em></a></figcaption>
-                                            </figure>
-                                        </li>
-                                        <li>
-                                            <figure>
-                                                <img src="~/Content/images/instagram/img-03.jpg" alt="image description">
-                                                <figcaption><a href="javascript:void(0);"><i class="icon-heart"></i><em>50,134</em></a></figcaption>
-                                            </figure>
-                                        </li>
-                                        <li>
-                                            <figure>
-                                                <img src="~/Content/images/instagram/img-04.jpg" alt="image description">
-                                                <figcaption><a href="javascript:void(0);"><i class="icon-heart"></i><em>50,134</em></a></figcaption>
-                                            </figure>
-                                        </li>
-                                        <li>
-                                            <figure>
-                                                <img src="~/Content/images/instagram/img-05.jpg" alt="image description">
-                                                <figcaption><a href="javascript:void(0);"><i class="icon-heart"></i><em>50,134</em></a></figcaption>
-                                            </figure>
-                                        </li>
-                                        <li>
-                                            <figure>
-                                                <img src="~/Content/images/instagram/img-06.jpg" alt="image description">
-                                                <figcaption><a href="javascript:void(0);"><i class="icon-heart"></i><em>50,134</em></a></figcaption>
-                                            </figure>
-                                        </li>
-                                        <li>
-                                            <figure>
-                                                <img src="~/Content/images/instagram/img-07.jpg" alt="image description">
-                                                <figcaption><a href="javascript:void(0);"><i class="icon-heart"></i><em>50,134</em></a></figcaption>
-                                            </figure>
-                                        </li>
-                                        <li>
-                                            <figure>
-                                                <img src="~/Content/images/instagram/img-08.jpg" alt="image description">
-                                                <figcaption><a href="javascript:void(0);"><i class="icon-heart"></i><em>50,134</em></a></figcaption>
-                                            </figure>
-                                        </li>
-                                        <li>
-                                            <figure>
-                                                <img src="~/Content/images/instagram/img-09.jpg" alt="image description">
-                                                <figcaption><a href="javascript:void(0);"><i class="icon-heart"></i><em>50,134</em></a></figcaption>
-                                            </figure>
-                                        </li>
-                                    </ul>
-                                </div>
-                            </div>
-                            <div class="tg-widget tg-widgetblogers">
-                                <div class="tg-widgettitle">
-                                    <h3>Top Bloogers</h3>
-                                </div>
-                                <div class="tg-widgetcontent">
-                                    <ul>
-                                        <li>
-                                            <div class="tg-author">
-                                                <figure><a href="javascript:void(0);"><img src="~/Content/images/author/imag-03.jpg" alt="image description"></a></figure>
-                                                <div class="tg-authorcontent">
-                                                    <h2><a href="javascript:void(0);">Jude Morphew</a></h2>
-                                                    <span>21,658 Published Books</span>
-                                                </div>
-                                            </div>
-                                        </li>
-                                        <li>
-                                            <div class="tg-author">
-                                                <figure><a href="javascript:void(0);"><img src="~/Content/images/author/imag-03.jpg" alt="image description"></a></figure>
-                                                <div class="tg-authorcontent">
-                                                    <h2><a href="javascript:void(0);">Jude Morphew</a></h2>
-                                                    <span>21,658 Published Books</span>
-                                                </div>
-                                            </div>
-                                        </li>
-                                        <li>
-                                            <div class="tg-author">
-                                                <figure><a href="javascript:void(0);"><img src="~/Content/images/author/imag-03.jpg" alt="image description"></a></figure>
-                                                <div class="tg-authorcontent">
-                                                    <h2><a href="javascript:void(0);">Jude Morphew</a></h2>
-                                                    <span>21,658 Published Books</span>
-                                                </div>
-                                            </div>
-                                        </li>
-                                        <li>
-                                            <div class="tg-author">
-                                                <figure><a href="javascript:void(0);"><img src="~/Content/images/author/imag-03.jpg" alt="image description"></a></figure>
-                                                <div class="tg-authorcontent">
-                                                    <h2><a href="javascript:void(0);">Jude Morphew</a></h2>
-                                                    <span>21,658 Published Books</span>
-                                                </div>
-                                            </div>
-                                        </li>
-                                    </ul>
-                                </div>
-                            </div>
+
                         </aside>
                     </div>
                 </div>
