--- a/Frontend-PI/Views/Shared/_Layout.cshtml
+++ b/Frontend-PI/Views/Shared/_Layout.cshtml
@@ -98,16 +98,20 @@
                     </ul>
                 </li>
                 <li>
-                    <a href="#pageSubmenu2" data-toggle="collapse" aria-expanded="false" class="dropdown-toggle">Ahmed Saddem</a>
+                    <a href="#pageSubmenu2" data-toggle="collapse" aria-expanded="false" class="dropdown-toggle">Gestion de la Livraison</a>
                     <ul class="collapse list-unstyled" id="pageSubmenu2">
                         <li>
-                            <a href="#">Page 1</a>
+                            <a href="/DeliveryMan">Gestion Livreur</a>
                         </li>
                         <li>
-                            <a href="#">Page 2</a>
+                            <a href="/DeliveryMan/AffecterCommande">Affectation Par Commande</a>
                         </li>
                         <li>
-                            <a href="#">Page 3</a>
+                            <a href="/DM">Affectation En Masse</a>
+                        </li>
+
+                        <li>
+                            <a href="/DeliveryMan/Statistique">Statistique Général</a>
                         </li>
                     </ul>
                 </li>
@@ -286,7 +290,7 @@
                                             @if (Session["Username"] != null && Session["UserRole"] != null)
                                             {
                                                 <li>
-                                                    <button type="button" id="sidebarCollapse" class="btn btn-info">
+                                                    <button type="button" id="sidebarCollapse" class="btn bg-info">
                                                         <i class="fas fa-align-left"></i>
 
                                                         <span>Dashboard</span>
